@@ -7,7 +7,9 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 == Unreleased
 
-_No changes since previous release._
+Bug Fixes::
+
+* fix page number of index entries in prepress book when page numbering starts after toc and toc is inserted using macro (#2487)
 
 == 2.3.12 (2024-02-02) - @mojavelinux
 
